src/test/06-Errors/error-incomplete.txt
error-incomplete.ck:1:10: syntax error
[1] SinOsc @ 
             ^
